# Multimodal3DEnvironmentStorage

./: .gitignore  docker-compose.yml  implementation.md  main.py  pyproject.toml  robot_config.yaml
core/: base_service.py  bus.py  config.py  models.py
cpp_sensors/: CMakeLists.txt  bindings.cpp  mock_frame_sensor.cpp  mock_frame_sensor.hpp  mock_video_sensor.cpp  mock_video_sensor.hpp  sensor_factory.cpp  sensor_factory.hpp  sensor_interface.hpp
database/: db_client.py
master_thesis/: literature.bib  literature.tex  phdthesis.cls  statement.tex  thesis-final.tex  thesis.tex  zkratky.tex
master_thesis/chapters/: abstract.tex  architecture.tex  conclusion.tex  existing_solutions.tex  implementation.tex  introduction.tex  requirements.tex  testing.tex  theoretical_background.tex
master_thesis/chapters/statement/: conclusion.tex  introduction.tex  literature.tex  methods_results.tex  summary.tex
scripts/: build_cpp.sh  setup.sh
services/: network_worker.py  sensor_worker.py  storage_worker.py
tests/: test_integration.py
